[project]
name = "zep-python"
version = "1.5.0"
description = "Zep: Fast, scalable building blocks for LLM apps. This is the Python client for the Zep service."
authors = [{ name = "Tiago Davi", email = "tiago.asp.net@gmail.com" }]
requires-python = ">=3.8.1,<4"
readme = "README.md"
dependencies = [
    "httpx>=0.24.0,<0.28",
    "pydantic>=2.10",
    "packaging~=23.1",
]

[dependency-groups]
test = [
    "pytest>=7.3.1,<8",
    "pytest-httpx>=0.22.0,<0.35",
    "pytest-asyncio>=0.21.0,<0.22",
    "ruff>=0.0.265,<0.0.266",
    "mypy>=1.2.0,<2",
    "pytest-mock>=3.10.0,<4",
]
dev = [
    "black>=23.3.0,<24",
    "ruff>=0.0.265,<0.0.266",
    "mypy>=1.2.0,<2",
    "pre-commit>=3.3.1,<4",
    "pytest-httpx>=0.22.0,<0.23",
    "faker>=19.2.0,<20",
    "python-dotenv>=1.0.0,<2",
    "pdoc3>=0.10.0,<0.11",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
